# ghc-next-packages

./: 01-index.tar  README.md  mirrors.json  root.json  snapshot.json  timestamp.json
.github/workflows/: CI.yml  watch.yml
_sources/PyF/0.11.1.0/: meta.toml
_sources/UTxO/2.0.0.0.0.0.1/: meta.toml
_sources/Win32-network/0.1.0.0/: meta.toml
_sources/base-deriving-via/0.1.0.0/: meta.toml
_sources/base-deriving-via/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/byron-spec-chain/0.1.0.0/: meta.toml
_sources/byron-spec-chain/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/byron-spec-chain/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/byron-spec-chain/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/byron-spec-ledger/0.1.0.0/: meta.toml
_sources/byron-spec-ledger/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/byron-spec-ledger/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/byron-spec-ledger/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/bytestring/0.11.3.1/: meta.toml
_sources/bytestring/0.11.3.1.0.0.0.1/: meta.toml
_sources/canonical-json/0.6.0.0/: meta.toml
_sources/cardano-binary-test/1.3.0/: meta.toml
_sources/cardano-binary-test/1.3.0.0.0.0.0.2/: meta.toml
_sources/cardano-binary/1.5.0/: meta.toml
_sources/cardano-binary/1.5.0.0.0.0.0.2/: meta.toml
_sources/cardano-client/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/cardano-client/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-client/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/cardano-client/0.1.0.0.0.0.0.0.4/: meta.toml
_sources/cardano-crypto-class/2.0.0/: meta.toml
_sources/cardano-crypto-class/2.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-crypto-praos/2.0.0/: meta.toml
_sources/cardano-crypto-praos/2.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-crypto-test/1.3.0/: meta.toml
_sources/cardano-crypto-test/1.3.0.0.0.0.0.1/: meta.toml
_sources/cardano-crypto-test/1.3.0.0.0.0.0.2/: meta.toml
_sources/cardano-crypto-test/1.3.0.0.0.0.0.3/: meta.toml
_sources/cardano-crypto-tests/2.0.0/: meta.toml
_sources/cardano-crypto-tests/2.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-crypto-wrapper/1.3.0/: meta.toml
_sources/cardano-crypto-wrapper/1.3.0.0.0.0.0.1/: meta.toml
_sources/cardano-crypto-wrapper/1.3.0.0.0.0.0.2/: meta.toml
_sources/cardano-crypto-wrapper/1.3.0.0.0.0.0.3/: meta.toml
_sources/cardano-crypto/1.1.0/: meta.toml
_sources/cardano-data/0.1.0.0/: meta.toml
_sources/cardano-data/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/cardano-data/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-data/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/cardano-ledger-alonzo-test/0.1.0.0/: meta.toml
_sources/cardano-ledger-alonzo-test/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/cardano-ledger-alonzo-test/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-ledger-alonzo-test/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/cardano-ledger-alonzo/0.1.0.0/: meta.toml
_sources/cardano-ledger-alonzo/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/cardano-ledger-alonzo/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-ledger-alonzo/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/cardano-ledger-api/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/cardano-ledger-api/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-ledger-api/0.1.0.0.0.0.0.0.3/: meta.toml
_sources/cardano-ledger-babbage-test/0.1.0.0.0.0.0.0.1/: meta.toml
_sources/cardano-ledger-babbage-test/0.1.0.0.0.0.0.0.2/: meta.toml
_sources/cardano-ledger-babbage/0.1.0.0/: meta.toml
index/UTxO/2.0.0.0.0.0.1/: UTxO.cabal  package.json
index/base-deriving-via/0.1.0.0.0.0.0.0.2/: base-deriving-via.cabal  package.json
index/cardano-binary-test/1.3.0.0.0.0.0.2/: cardano-binary-test.cabal  package.json
index/cardano-binary/1.5.0.0.0.0.0.2/: cardano-binary.cabal  package.json
index/cardano-client/0.1.0.0.0.0.0.0.4/: cardano-client.cabal  package.json
index/cardano-ledger-api/0.1.0.0.0.0.0.0.2/: cardano-ledger-api.cabal  package.json
index/cardano-ledger-conway-test/0.1.0.0.0.0.0.0.3/: cardano-ledger-conway-test.cabal  package.json
index/cardano-prelude-test/0.1.0.0.0.0.0.0.2/: cardano-prelude-test.cabal  package.json
index/cardano-prelude/0.1.0.0.0.0.0.0.2/: cardano-prelude.cabal  package.json
index/cardano-protocol-tpraos/0.1.0.0.0.0.0.0.3/: cardano-protocol-tpraos.cabal  package.json
index/cardano-slotting/0.1.0.0.0.0.0.0.2/: cardano-slotting.cabal  package.json
index/ekg-forward/0.1.0.0.0.0.0.1/: ekg-forward.cabal  package.json
index/heapwords/0.1.0.0.0.0.0.0.2/: heapwords.cabal  package.json
index/inline-r/0.10.5.0.0.0.0.1/: inline-r.cabal  package.json
index/measures/0.1.0.0.0.0.0.0.2/: measures.cabal  package.json
index/monoidal-synchronisation/0.1.0.0.0.0.0.0.3/: monoidal-synchronisation.cabal  package.json
index/network-mux/0.1.0.0.0.0.0.0.1/: network-mux.cabal  package.json
index/ntp-client/0.0.1.0.0.0.0.4/: ntp-client.cabal  package.json
index/orphans-deriving-via/0.1.0.0.0.0.0.0.2/: orphans-deriving-via.cabal  package.json
index/ouroboros-consensus-byron-test/0.1.0.0.0.0.0.0.1/: ouroboros-consensus-byron-test.cabal  package.json
index/ouroboros-consensus-byron/0.1.0.0.0.0.0.0.1/: ouroboros-consensus-byron.cabal  package.json
index/ouroboros-consensus-byronspec/0.1.0.0.0.0.0.0.1/: ouroboros-consensus-byronspec.cabal  package.json
index/ouroboros-consensus-cardano-test/0.1.0.0.0.0.0.0.2/: ouroboros-consensus-cardano-test.cabal  package.json
index/ouroboros-consensus-cardano-tools/0.1.0.0.0.0.0.0.4/: ouroboros-consensus-cardano-tools.cabal  package.json
index/ouroboros-consensus-cardano/0.1.0.0.0.0.0.0.3/: ouroboros-consensus-cardano.cabal  package.json
index/ouroboros-consensus-mock-test/0.1.0.0.0.0.0.0.1/: ouroboros-consensus-mock-test.cabal  package.json
index/ouroboros-consensus-mock/0.1.0.0.0.0.0.0.2/: ouroboros-consensus-mock.cabal  package.json
index/ouroboros-consensus-protocol/0.1.0.0.0.0.0.0.3/: ouroboros-consensus-protocol.cabal  package.json
index/ouroboros-consensus-shelley-test/0.1.0.0.0.0.0.0.4/: ouroboros-consensus-shelley-test.cabal  package.json
index/ouroboros-network/0.1.0.0.0.0.0.0.1/: ouroboros-network.cabal  package.json
scripts/: add-from-github.sh
(+655 files in other folders)
