cabal-version:           1.22
name:                    UTxO
version:                 2.0.0.0.0.0.1
license:                 MIT
copyright:               Input Output
maintainer:              Manuel M T Chakravarty
author:                  Manuel M T Chakravarty
stability:               experimental
synopsis:                UTxO model with Template Haskell witnesses
description:
    This package provides an executable version of the UTxO model with scripts defined in "An Abstract Model of UTXO-based Cryptocurrencies with Scripts" <https://eprint.iacr.org/2018/469>. It uses Template Haskell to reify witness scripts.

x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version:      HfM1.6.0
build-type:              Simple

executable UTxO
    main-is:          Main.hs
    other-modules:
        Examples.Keys
        Examples.PubKey
        Examples.PubKeyHashes
        Examples.Simple
        Ledger
        Types
        UTxO
        Witness

    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        containers,
        cryptohash,
        cryptonite,
        hashable,
        memory,
        template-haskell
