cabal-version: 2.2
name:          cardano-binary-test
version:       1.3.0.0.0.0.0.2
license:       MIT
license-file:  LICENSE
copyright:     2019-2021 IOHK
maintainer:    operations@iohk.io
author:        IOHK
synopsis:      Test helpers from cardano-binary exposed to other packages
description:   Test helpers from cardano-binary exposed to other packages
category:      Currency
build-type:    Simple

flag development
    description: Disable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:
        Test.Cardano.Binary.Helpers
        Test.Cardano.Binary.Helpers.GoldenRoundTrip
        Test.Cardano.Binary.Serialization
        Test.Cardano.Binary.Drop
        Test.Cardano.Binary.Failure

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.14 && <4.17,
        base,
        bytestring,
        cardano-binary,
        cardano-prelude-test,
        cborg,
        containers,
        formatting,
        hedgehog,
        hspec,
        pretty-show,
        QuickCheck,
        quickcheck-instances,
        text,
        time,
        vector

    if !flag(development)
        ghc-options: -Werror
