cabal-version: 3.0
name:          cardano-ledger-conway-test
version:       0.1.0.0.0.0.0.0.3
license:       Apache-2.0
maintainer:    operations@iohk.io
author:        IOHK
bug-reports:   https://github.com/input-output-hk/cardano-ledger/issues
synopsis:      Tests for Cardano ledger Conway era
description:   This package builds upon the Alonzo ledger
category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/cardano-ledger
    subdir:   eras/conway/test-suite

library
    exposed-modules:
        Test.Cardano.Ledger.Conway.Examples.Consensus
        Test.Cardano.Ledger.Conway.Serialisation.Generators
        Test.Cardano.Ledger.Conway.Serialisation.Roundtrip

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.12 && <4.17,
        cardano-ledger-alonzo,
        cardano-ledger-alonzo-test,
        cardano-ledger-babbage,
        cardano-ledger-babbage-test,
        cardano-ledger-conway,
        cardano-ledger-core,
        cardano-ledger-shelley-ma-test,
        cardano-ledger-shelley-ma,
        cardano-slotting,
        containers,
        data-default-class,
        plutus-tx,
        cardano-ledger-shelley-test,
        cardano-ledger-shelley,
        strict-containers,
        tasty,
        tasty-quickcheck,
        QuickCheck

test-suite cardano-ledger-conway-test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
        -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
        "-with-rtsopts=-K4m -M250m"

    build-depends:
        base >=4.12 && <4.17,
        cardano-ledger-conway,
        cardano-ledger-conway-test,
        cardano-ledger-shelley-test,
        tasty
