cabal-version: 2.2
name:          cardano-prelude-test
version:       0.1.0.0.0.0.0.0.2
license:       MIT
license-file:  LICENSE
copyright:     2018-2021 IOHK
maintainer:    operations@iohk.io
author:        IOHK
synopsis:      Utility types and functions for testing Cardano
description:   Utility types and functions for testing Cardano
category:      Currency
build-type:    Simple

flag development
    description: Disable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:    Test.Cardano.Prelude
    hs-source-dirs:     src
    other-modules:
        Test.Cardano.Prelude.Base16
        Test.Cardano.Prelude.Gen
        Test.Cardano.Prelude.Golden
        Test.Cardano.Prelude.Helpers
        Test.Cardano.Prelude.Orphans
        Test.Cardano.Prelude.QuickCheck.Arbitrary
        Test.Cardano.Prelude.QuickCheck.Property
        Test.Cardano.Prelude.Tripping

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall -fno-warn-all-missed-specialisations
        -fno-warn-missing-deriving-strategies
        -fno-warn-missing-import-lists -fno-warn-missing-safe-haskell-mode
        -fno-warn-prepositive-qualified-module -fno-warn-safe
        -fno-warn-unsafe

    build-depends:
        base,
        aeson,
        aeson-pretty >=0.8.5,
        attoparsec,
        base16-bytestring >=1,
        bytestring,
        canonical-json,
        cardano-prelude,
        containers,
        cryptonite,
        formatting,
        hedgehog,
        hspec,
        pretty-show,
        QuickCheck,
        quickcheck-instances,
        template-haskell,
        th-compat,
        text,
        time

    if !flag(development)
        ghc-options: -Werror

test-suite cardano-prelude-test-suite
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     test
    other-modules:
        Test.Cardano.Prelude.GHC.Heap.NormalFormSpec
        Test.Cardano.Prelude.GHC.Heap.SizeSpec
        Test.Cardano.Prelude.GHC.Heap.TreeSpec

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -threaded -rtsopts -Wall -fno-warn-missing-deriving-strategies
        -fno-warn-missing-safe-haskell-mode
        -fno-warn-prepositive-qualified-module
        -fno-warn-all-missed-specialisations
        -fno-warn-missing-deriving-strategies
        -fno-warn-missing-import-lists -fno-warn-missing-safe-haskell-mode
        -fno-warn-prepositive-qualified-module -fno-warn-safe
        -fno-warn-unsafe

    build-depends:
        base,
        bytestring,
        cardano-prelude,
        cardano-prelude-test,
        ghc-heap,
        ghc-prim,
        hedgehog,
        text

    if !flag(development)
        ghc-options: -Werror
