cabal-version:      2.2
name:               cardano-prelude
version:            0.1.0.0.0.0.0.0.2
license:            MIT
license-file:       LICENSE
copyright:          2018-2022 IOHK
maintainer:         operations@iohk.io
author:             IOHK
synopsis:           A Prelude replacement for the Cardano project
description:        A Prelude replacement for the Cardano project
category:           Currency
build-type:         Simple
extra-source-files:
    ChangeLog.md
    README.md
    cbits/hashset.h
    cbits/worklist.h

flag development
    description: Disable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:
        Cardano.Prelude
        Data.Semigroup.Action

    cc-options:         -Wall
    c-sources:
        cbits/hashset.c
        cbits/worklist.c
        cbits/closure_size.c

    hs-source-dirs:     src
    other-modules:
        Cardano.Prelude.Base
        Cardano.Prelude.Compat
        Cardano.Prelude.Compat.ByteString.Short
        Cardano.Prelude.Error
        Cardano.Prelude.Formatting
        Cardano.Prelude.GHC.Heap
        Cardano.Prelude.GHC.Heap.NormalForm
        Cardano.Prelude.GHC.Heap.Size
        Cardano.Prelude.GHC.Heap.Tree
        Cardano.Prelude.Json.Canonical
        Cardano.Prelude.Json.Parse
        Cardano.Prelude.Orphans
        Cardano.Prelude.Strict

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall -fno-warn-all-missed-specialisations
        -fno-warn-missing-deriving-strategies
        -fno-warn-missing-import-lists -fno-warn-missing-safe-haskell-mode
        -fno-warn-prepositive-qualified-module -fno-warn-safe
        -fno-warn-unsafe

    build-depends:
        base >=4.14 && <4.18,
        aeson,
        base16-bytestring >=1,
        bytestring,
        canonical-json,
        cborg,
        containers,
        formatting,
        ghc-heap,
        ghc-prim,
        integer-gmp,
        mtl,
        protolude,
        tagged,
        text,
        time

    if !flag(development)
        ghc-options: -Werror
