cabal-version: 2.4
name:          cardano-protocol-tpraos
version:       0.1.0.0.0.0.0.0.3
license:       Apache-2.0
maintainer:    operations@iohk.io
author:        IOHK
bug-reports:   https://github.com/input-output-hk/cardano-ledger/issues
synopsis:      Cardano Protocol: Transitional Praos

source-repository head
    type:     git
    location: https://github.com/input-output-hk/cardano-ledger
    subdir:   libs/cardano-protocol-tpraos

library
    exposed-modules:
        Cardano.Protocol.TPraos.API
        Cardano.Protocol.TPraos.BHeader
        Cardano.Protocol.TPraos.OCert
        Cardano.Protocol.TPraos.Rules.OCert
        Cardano.Protocol.TPraos.Rules.Overlay
        Cardano.Protocol.TPraos.Rules.Prtcl
        Cardano.Protocol.TPraos.Rules.Tickn
        Cardano.Protocol.TPraos.Rules.Updn

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.12 && <4.17,
        bytestring,
        cardano-binary,
        cardano-crypto-class,
        cardano-ledger-alonzo,
        cardano-ledger-babbage,
        cardano-ledger-conway,
        cardano-ledger-core,
        cardano-ledger-shelley,
        cardano-ledger-shelley-ma,
        cardano-slotting,
        containers,
        deepseq,
        nothunks,
        mtl,
        quiet,
        non-integral,
        set-algebra,
        small-steps,
        transformers
