cabal-version: 3.0
name:          cardano-slotting
version:       0.1.0.0.0.0.0.0.2
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     IOHK
maintainer:    formal.methods@iohk.io
author:        IOHK Formal Methods Team
synopsis:      Key slotting types for cardano libraries
build-type:    Simple

flag development
    description: Disable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:
        Cardano.Slotting.Block
        Cardano.Slotting.EpochInfo
        Cardano.Slotting.EpochInfo.API
        Cardano.Slotting.EpochInfo.Extend
        Cardano.Slotting.EpochInfo.Impl
        Cardano.Slotting.Slot
        Cardano.Slotting.Time

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        base >=4.14 && <4.17,
        aeson,
        base,
        cardano-binary,
        deepseq,
        mmorph,
        nothunks,
        quiet,
        serialise,
        time >=1.9.1 && <1.11

    if !flag(development)
        ghc-options: -Werror

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    Test.Cardano.Slotting.EpochInfo
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
        -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.14 && <4.17,
        base,
        cardano-slotting,
        tasty,
        tasty-quickcheck

    if !flag(development)
        ghc-options: -Werror
