cabal-version:   2.4
name:            ekg-forward
version:         0.1.0.0.0.0.0.1
license:         Apache-2.0
license-file:    LICENSE
copyright:       2021 Input Output (Hong Kong) Ltd.
maintainer:      Denis Shevchenko <denis.shevchenko@iohk.io>
author:          Denis Shevchenko
homepage:        https://github.com/input-output-hk/ekg-forward
bug-reports:     https://github.com/input-output-hk/ekg-forward/issues
synopsis:        See README for more info
description:     See README for more info
category:        System, Network
build-type:      Simple
extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ekg-forward.git

library
    exposed-modules:
        System.Metrics.Acceptor
        System.Metrics.Configuration
        System.Metrics.Forwarder
        System.Metrics.ReqResp
        System.Metrics.Network.Acceptor
        System.Metrics.Network.Forwarder
        System.Metrics.Store.Acceptor
        System.Metrics.Store.Forwarder
        System.Metrics.Protocol.Type
        System.Metrics.Protocol.Codec
        System.Metrics.Protocol.Acceptor
        System.Metrics.Protocol.Forwarder

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates

    build-depends:
        base >=4.12 && <5,
        async,
        bytestring,
        cborg,
        contra-tracer,
        ekg-core,
        io-classes,
        network,
        ouroboros-network-framework,
        serialise,
        stm,
        text,
        time,
        typed-protocols,
        typed-protocols-cborg,
        unordered-containers

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields

executable demo-forwarder
    main-is:          forwarder.hs
    hs-source-dirs:   demo
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-T
    build-depends:
        base,
        contra-tracer,
        ekg-core,
        ekg-forward,
        text,
        time

executable demo-acceptor
    main-is:          acceptor.hs
    hs-source-dirs:   demo
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-T
    build-depends:
        base,
        contra-tracer,
        ekg-core,
        ekg-forward,
        stm,
        text,
        time

test-suite ekg-forward-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:
        Test.GetAllMetrics
        Test.GetMetrics
        Test.MkConfig

    default-language:   Haskell2010
    default-extensions: OverloadedStrings
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.12 && <5,
        base,
        contra-tracer,
        ekg-core,
        ekg-forward,
        hspec,
        stm,
        time,
        unordered-containers

    if impl(ghc >=8.0)
        ghc-options: -Wredundant-constraints

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists -Wpartial-fields
