cabal-version: >=1.10
name:          heapwords
version:       0.1.0.0.0.0.0.0.2
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     IOHK
maintainer:    operations@iohk.io
author:        IOHK
synopsis:      Heapwords
build-type:    Simple

flag development
    description: Disable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:  Cardano.HeapWords
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

    build-depends:
        array,
        base,
        bytestring,
        containers,
        ghc-prim,
        text,
        time,
        vector

    if !flag(development)
        ghc-options: -Werror

    if impl(ghc <9.0.0)
        build-depends: integer-gmp
