cabal-version:      2.4
name:               monoidal-synchronisation
version:            0.1.0.0.0.0.0.0.3
license:            Apache-2.0
license-file:       LICENSE NOTICE
copyright:          2021 Input Output (Hong Kong) Ltd.
maintainer:         coot@coot.me
author:             Marcin Szamotulski
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Monoid.Synchronisation
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -rtsopts -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wno-unticked-promoted-constructors

    build-depends:    base >=4.9 && <4.15

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    Test.Data.Monoid.Synchronisation
    default-language: Haskell2010
    ghc-options:
        -rtsopts -threaded -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wno-unticked-promoted-constructors

    build-depends:
        base,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        io-classes,
        io-sim,
        monoidal-synchronisation
