cabal-version:      2.2
name:               network-mux
version:            0.1.0.0.0.0.0.0.1
license:            Apache-2.0
license-file:       LICENSE NOTICE
copyright:          2019 Input Output (Hong Kong) Ltd.
maintainer:
    duncan@well-typed.com, marcin.szamotulski@iohk.io, marc.fontaine@iohk.io, karl.knutsson@iohk.io, alex@well-typed.com, neil.davies@pnsol.com

author:
    Duncan Coutts, Marc Fontaine, Karl Knutsson, Marcin Szamotulski, Alexander Vieth, Neil Davies

synopsis:           Multiplexing library
category:           Network
build-type:         Simple
extra-source-files: CHANGELOG.md

flag asserts
    description: Enable assertions
    default:     False

flag ipv6
    description: Enable IPv6 test cases
    default:     False
    manual:      True

flag tracetcpinfo
    description: Enable costly Linux only tracing of the kernel's tcpinfo
    default:     False
    manual:      True

library
    exposed-modules:
        Network.Mux
        Network.Mux.Channel
        Network.Mux.Codec
        Network.Mux.Compat
        Network.Mux.Egress
        Network.Mux.Ingress
        Network.Mux.Time
        Network.Mux.Timeout
        Network.Mux.Types
        Network.Mux.Trace
        Network.Mux.Bearer.AttenuatedChannel
        Network.Mux.Bearer.Pipe
        Network.Mux.Bearer.Queues
        Network.Mux.Bearer.Socket
        Network.Mux.DeltaQ.TraceStats
        Network.Mux.DeltaQ.TraceStatsSupport
        Network.Mux.DeltaQ.TraceTransformer
        Network.Mux.DeltaQ.TraceTypes
        Network.Mux.TCPInfo
        Control.Concurrent.JobPool

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wno-unticked-promoted-constructors -Wall -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wpartial-fields -Widentities -Wredundant-constraints
        -Wno-unticked-promoted-constructors

    build-depends:
        base >=4.9 && <4.15,
        io-classes >=0.1 && <0.3,
        strict-stm >=0.1 && <0.2,
        contra-tracer >=0.1 && <0.2,
        monoidal-synchronisation >=0.1 && <0.2,
        array >=0.5 && <0.6,
        binary >=0.8 && <0.11,
        bytestring >=0.10 && <0.11,
        containers >=0.5 && <0.7,
        network >=3.1.2.2 && <3.2,
        process >=1.6 && <1.7,
        statistics-linreg >=0.3 && <0.4,
        vector >=0.12 && <0.13,
        time >=1.9.1 && <1.11,
        quiet

    if os(windows)
        build-depends:
            Win32 >=2.5.4.1 && <3.0,
            Win32-network >=0.1 && <0.2

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

    if flag(tracetcpinfo)
        cpp-options: -DMUX_TRACE_TCPINFO

    if os(linux)
        other-modules: Network.Mux.TCPInfo.Linux

    if os(windows)
        exposed-modules: Network.Mux.Bearer.NamedPipe

executable mux-demo
    main-is:          mux-demo.hs
    hs-source-dirs:   demo test
    other-modules:    Test.Mux.ReqResp
    default-language: Haskell2010
    ghc-options:
        -threaded -Wall -fno-ignore-asserts -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wpartial-fields -Widentities -Wredundant-constraints

    build-depends:
        base,
        directory,
        network-mux,
        io-classes,
        contra-tracer,
        stm,
        bytestring,
        cborg,
        serialise

    if os(windows)
        build-depends:
            Win32,
            Win32-network

    else
        build-depends: network

executable cardano-ping
    main-is:          cardano-ping.hs
    hs-source-dirs:   tools
    default-language: Haskell2010
    ghc-options:
        -threaded -Wall -fno-ignore-asserts -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wpartial-fields -Widentities -Wredundant-constraints

    build-depends:
        base,
        aeson,
        network-mux,
        io-classes,
        strict-stm,
        contra-tracer,
        bytestring,
        cborg,
        network,
        tdigest,
        text

    if os(windows)
        buildable: False

    else

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Mux
        Test.Mux.ReqResp
        Test.Mux.Timeout

    default-language: Haskell2010
    ghc-options:
        -threaded -Wall -fno-ignore-asserts -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wpartial-fields -Widentities -Wredundant-constraints
        -Wno-unticked-promoted-constructors

    build-depends:
        base,
        io-classes,
        strict-stm,
        io-sim >=0.2 && <0.3,
        contra-tracer,
        network-mux,
        Win32-network,
        binary,
        bytestring,
        cborg,
        containers,
        network,
        process,
        QuickCheck,
        splitmix,
        serialise,
        tasty,
        tasty-quickcheck,
        time

    if os(windows)
        build-depends: Win32 >=2.5.4.1 && <3.0

    if flag(ipv6)
        cpp-options: -DOUROBOROS_NETWORK_IPV6
