cabal-version: >=1.10
name:          orphans-deriving-via
version:       0.1.0.0.0.0.0.0.2
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     IOHK
maintainer:    operations@iohk.io
author:        IOHK
synopsis:      Orphan instances for the base-deriving-via hooks
build-type:    Simple

flag development
    description: Disable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:
        Data.DerivingVia.DeepSeq
        Data.DerivingVia.NoThunks

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base,
        base-deriving-via,
        deepseq,
        nothunks

    if !flag(development)
        ghc-options: -Werror
